fixed_templates/elasticsearch_checkov_fixed_template.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch-master-headless
  labels:
    heritage: Helm
    release: release-name
    chart: elasticsearch
    app: elasticsearch-master
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  namespace: test-ns
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: elasticsearch-master
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-master
  labels:
    heritage: Helm
    release: release-name
    chart: elasticsearch
    app: elasticsearch-master
  annotations:
    esMajorVersion: '8'
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  namespace: test-ns
spec:
  serviceName: elasticsearch-master-headless
  selector:
    matchLabels:
      app: elasticsearch-master
  replicas: 3
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-master
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 30Gi
  template:
    metadata:
      name: elasticsearch-master
      labels:
        release: release-name
        chart: elasticsearch
        app: elasticsearch-master
      annotations: null
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 25000
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - elasticsearch-master
            topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 120
      volumes:
      - name: elasticsearch-certs
        secret:
          secretName: elasticsearch-master-certs
      - name: secret-volume
        secret:
          secretName: my-secret
      - name: secret-volume
        secret:
          secretName: my-secret
      enableServiceLinks: true
      containers:
      - name: elasticsearch
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 25000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10@sha256:81facec55eceeb7bebeed80af49eb9a05fce77709b231210f343ac8b9599098e
        imagePullPolicy: Always
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - "set -e\n\n# Exit if ELASTIC_PASSWORD in unset\nif [ -z \"${ELASTIC_PASSWORD}\"\
              \ ]; then\n  echo \"ELASTIC_PASSWORD variable is missing, exiting\"\n\
              \  exit 1\nfi\n\n# If the node is starting up wait for the cluster to\
              \ be ready (request params: \"wait_for_status=green&timeout=1s\" )\n\
              # Once it has started only check that the node itself is responding\n\
              START_FILE=/tmp/.es_start_file\n\n# Disable nss cache to avoid filling\
              \ dentry cache when calling curl\n# This is required with Elasticsearch\
              \ Docker using nss < 3.52\nexport NSS_SDB_USE_CACHE=no\n\nhttp () {\n\
              \  local path=\"${1}\"\n  local args=\"${2}\"\n  set -- -XGET -s\n\n\
              \  if [ \"$args\" != \"\" ]; then\n    set -- \"$@\" $args\n  fi\n\n\
              \  set -- \"$@\" -u \"elastic:${ELASTIC_PASSWORD}\"\n\n  curl --output\
              \ /dev/null -k \"$@\" \"https://127.0.0.1:9200${path}\"\n}\n\nif [ -f\
              \ \"${START_FILE}\" ]; then\n  echo 'Elasticsearch is already running,\
              \ lets check the node is healthy'\n  HTTP_CODE=$(http \"/\" \"-w %{http_code}\"\
              )\n  RC=$?\n  if [[ ${RC} -ne 0 ]]; then\n    echo \"curl --output /dev/null\
              \ -k -XGET -s -w '%{http_code}' \\${BASIC_AUTH} https://127.0.0.1:9200/\
              \ failed with RC ${RC}\"\n    exit ${RC}\n  fi\n  # ready if HTTP code\
              \ 200, 503 is tolerable if ES version is 6.x\n  if [[ ${HTTP_CODE} ==\
              \ \"200\" ]]; then\n    exit 0\n  elif [[ ${HTTP_CODE} == \"503\" &&\
              \ \"8\" == \"6\" ]]; then\n    exit 0\n  else\n    echo \"curl --output\
              \ /dev/null -k -XGET -s -w '%{http_code}' \\${BASIC_AUTH} https://127.0.0.1:9200/\
              \ failed with HTTP code ${HTTP_CODE}\"\n    exit 1\n  fi\n\nelse\n \
              \ echo 'Waiting for elasticsearch cluster to become ready (request params:\
              \ \"wait_for_status=green&timeout=1s\" )'\n  if http \"/_cluster/health?wait_for_status=green&timeout=1s\"\
              \ \"--fail\" ; then\n    touch ${START_FILE}\n    exit 0\n  else\n \
              \   echo 'Cluster is not yet ready (request params: \"wait_for_status=green&timeout=1s\"\
              \ )'\n    exit 1\n  fi\nfi\n"
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - name: elasticsearch-master
          mountPath: /usr/share/elasticsearch/data
        - name: elasticsearch-certs
          mountPath: /usr/share/elasticsearch/config/certs
          readOnly: true
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        livenessProbe:
          exec:
            command:
            - ls
            - /
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: release-name-lgith-test
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: hook-succeeded
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  namespace: test-ns
spec:
  securityContext:
    fsGroup: 1000
    runAsUser: 25000
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: release-name-crwcs-test
    env: []
    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10@sha256:81facec55eceeb7bebeed80af49eb9a05fce77709b231210f343ac8b9599098e
    imagePullPolicy: Always
    command:
    - sh
    - -c
    - '#!/usr/bin/env bash -e

      curl -XGET --fail --cacert /usr/share/elasticsearch/config/certs/tls.crt -u
      "elastic:${ELASTIC_PASSWORD}" https://''elasticsearch-master:9200/_cluster/health?wait_for_status=green&timeout=1s''

      '
    volumeMounts:
    - name: elasticsearch-certs
      mountPath: /usr/share/elasticsearch/config/certs
      readOnly: true
    - name: secret-volume
      readOnly: true
      mountPath: /etc/secret-volume
    securityContext:
      capabilities:
        drop:
        - ALL
      allowPrivilegeEscalation: false
      runAsUser: 25000
      readOnlyRootFilesystem: true
      runAsNonRoot: true
      runAsGroup: 25000
    livenessProbe:
      exec:
        command:
        - ls
        - /
      initialDelaySeconds: 30
      periodSeconds: 10
    resources:
      requests:
        memory: 128Mi
        cpu: 250m
      limits:
        memory: 128Mi
        cpu: 250m
    readinessProbe:
      exec:
        command:
        - ls
        - /
      initialDelaySeconds: 30
      periodSeconds: 10
  restartPolicy: Never
  volumes:
  - name: elasticsearch-certs
    secret:
      secretName: elasticsearch-master-certs
  - name: secret-volume
    secret:
      secretName: my-secret
  automountServiceAccountToken: false
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
